--- a/src/template.html
+++ b/src/template.html
@@ -1,9 +1,10 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1.0'>
 	<meta name="author" content="Yu-Ann Chen">
+    <meta name="Description" content="A Python IDE with AI assisted auto-completion for maximized productivity.">
     <meta name="theme-color" content="#242424" />
 
 	%sapper.base%
