--- a/src/template.html
+++ b/src/template.html
@@ -14,7 +14,16 @@
 	<link rel='manifest' href='manifest.json'>
 	<link rel='icon' type='image/x-icon' href='favicon.ico'>
 	<title>Akimous</title>
-
+	
+	<style>
+		#logo {
+			position: relative;
+			height: 2.5rem;
+			top: .5rem;
+			padding-right: .5rem;
+		}
+	</style>
+	
 	<!-- Sapper generates a <style> tag containing critical CSS
 	     for the current page. CSS for the rest of the app is
 	     lazily loaded when it precaches secondary pages -->
