NEW: prepare for publish

--- a/src/template.html
+++ b/src/template.html
@@ -42,5 +42,6 @@
 	     and anything else it needs to hydrate the app and
 	     initialise the router -->
 	%sapper.scripts%
+	<script src="https://kit.fontawesome.com/c9e4a2b909.js" crossorigin="anonymous"></script>
 </body>
 </html>
