NEW: add "getting started"

--- a/src/template.html
+++ b/src/template.html
@@ -22,6 +22,10 @@
 			top: .5rem;
 			padding-right: .5rem;
 		}
+        
+        .hidden {
+            display: none;
+        }
 	</style>
 	
 	<!-- Sapper generates a <style> tag containing critical CSS
@@ -36,7 +40,7 @@
 <body>
 	<!-- The application will be rendered inside this element,
 	     because `app/client.js` references it -->
-	<div id='sapper'>%sapper.html%</div>
+	<div id="sapper" class="hidden">%sapper.html%</div>
 
 	<!-- Sapper creates a <script> tag containing `app/client.js`
 	     and anything else it needs to hydrate the app and
