--- a/src/template.html
+++ b/src/template.html
@@ -12,6 +12,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Lato|Saira&display=swap" rel="stylesheet">
     <link rel='stylesheet' href='global.css'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css'>
     <link rel='manifest' href='manifest.json'>
     <link rel='icon' type='image/x-icon' href='favicon.ico'>
     <link rel="apple-touch-icon" href="logo-192.png">
@@ -74,7 +75,6 @@
 	     and anything else it needs to hydrate the app and
 	     initialise the router -->
     %sapper.scripts%
-    <script src="https://kit.fontawesome.com/c9e4a2b909.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
