lint; change progress bar animation-fill-mode to forwards

--- a/src/template.html
+++ b/src/template.html
@@ -39,7 +39,7 @@
             background: #003085;
             animation-duration: 3s;
             animation-name: progress;
-            animation-fill-mode: backwards;
+            animation-fill-mode: forwards;
             z-index: -100;
         }
 
