NEW: documentation layout ok

--- a/src/template.html
+++ b/src/template.html
@@ -48,8 +48,12 @@
                 transform: scale(0, 1);
             }
 
-            to {
+            99% {
                 transform: scale(1, 1);
+            }
+            
+            to {
+                transform: scale(0, 0);
             }
         }
 
